<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (c) 2016 Martin Bella. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
!-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/settings_enabled"
        android:title="@string/settings_enabled_title"
        android:summaryOn="@string/settings_enabled_summary_on"
        android:summaryOff="@string/settings_enabled_summary_off">
        
        <intent android:action="android.settings.ACCESSIBILITY_SETTINGS"/>
    </CheckBoxPreference>
    
    <CheckBoxPreference
        android:key="@string/settings_permissions"
        android:title="@string/settings_permissions_title"
        android:summaryOn="@string/settings_permissions_summary_on"
        android:summaryOff="@string/settings_permissions_summary_off"/>
    
    <Preference
        android:key="@string/settings_screenmate"
        android:title="@string/settings_screenmate_title"
        android:summary="@string/settings_screenmate_summary"
        android:dependency="@string/settings_enabled"/>
    
    <ListPreference
        android:key="@string/settings_size"
        android:title="@string/settings_size_title"
        android:summary="@string/settings_size_summary"
        android:entries="@array/settings_size_entries"
        android:entryValues="@array/settings_size_values"
        android:defaultValue="@string/settings_size_default"
        android:dependency="@string/settings_enabled"/>
    
    <ListPreference
        android:key="@string/settings_movement_frequency"
        android:title="@string/settings_movement_frequency_title"
        android:summary="@string/settings_movement_frequency_message"
        android:entries="@array/settings_movement_frequency_entries"
        android:entryValues="@array/settings_movement_frequency_values"
        android:defaultValue="@string/settings_movement_frequency_default"
        android:dependency="@string/settings_enabled"/>
    
    <ListPreference
        android:key="@string/settings_movement_granularity"
        android:title="@string/settings_movement_granularity_title"
        android:summary="@string/settings_movement_granularity_message"
        android:entries="@array/settings_movement_granularity_entries"
        android:entryValues="@array/settings_movement_granularity_values"
        android:defaultValue="@string/settings_movement_granularity_default"
        android:dependency="@string/settings_enabled"/>
    
    <ListPreference
        android:key="@string/settings_sleep_delay"
        android:title="@string/settings_sleep_delay_title"
        android:summary="@string/settings_sleep_delay_message"
        android:dialogTitle="@string/settings_sleep_delay_dialog_title"
        android:entries="@array/settings_sleep_delay_entries"
        android:entryValues="@array/settings_sleep_delay_entries"
        android:defaultValue="@string/settings_sleep_delay_default"
        android:dependency="@string/settings_enabled"/>
</PreferenceScreen>
